Created a feature branch

--- a/src/app/info-header/info-header.component.html
+++ b/src/app/info-header/info-header.component.html
@@ -3,3 +3,5 @@
         aria-label="Button that displays a tooltip when focused or hovered over">
   Action
 </button>
+
+//This is the Feature branch change
