Integrated Formly library

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<app-table></app-table>
-
-<!-- This change will go in the Main Branch  -->
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
