--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,8 +13,9 @@
             <a class="nav-link" routerLink="todo">To Do List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" routerLink="registration" href="#">Reactive Form</a>
           </li>  
+
         </ul>
       </div>
     </div>
