--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,6 +7,9 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link" routerLink="weatherapp">Weather App</a>
+          </li>
+          <!-- <li class="nav-item">
             <a class="nav-link" routerLink="dashboard">Dashboard</a>
           </li>
           <li class="nav-item">
@@ -14,7 +17,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="registration" href="#">Reactive Form</a>
-          </li>  
+          </li>   -->
 
         </ul>
       </div>
