Added the calculator app

--- a/src/app/projects/weather-app/weather-app.component.html
+++ b/src/app/projects/weather-app/weather-app.component.html
@@ -36,11 +36,12 @@
             <div class="lc-block px-4 mb-4">
                 <div editable="rich">
                     <p><em>{{localTime }}</em></p>
-                    <p>&nbsp; Feels like: {{feels_like}}ºC</p>
-                    <p>&nbsp; Min Temp: {{minTemp}}ºC</p>
-                    <p>&nbsp; Weather Condition: {{condition}}</p>
-                    <p>&nbsp; Sunrise: {{sunrise}}</p>
-                    <p>&nbsp; Sunset: {{sunset}}</p>
+                    <p><em>{{timeZone}}</em></p>
+                    <p> Feels like: {{feels_like}}ºC</p>
+                    <p> Min Temp: {{minTemp}}ºC</p>
+                    <p> Weather Condition: {{condition}}</p>
+                    <p> Sunrise: {{sunrise}}</p>
+                    <p> Sunset: {{sunset}}</p>
                 </div>
             </div>
         </div>
