--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,15 +9,15 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="weatherapp">Weather App</a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" routerLink="dashboard">Dashboard</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="todo">To Do List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="registration" href="#">Reactive Form</a>
-          </li>   -->
+            <a class="nav-link" routerLink="newsapp" href="#">News App</a>
+          </li>  
 
         </ul>
       </div>
