--- a/src/app/news-feed-app/news-feed-app.component.html
+++ b/src/app/news-feed-app/news-feed-app.component.html
@@ -1,1 +1,29 @@
-<p>news-feed-app works!</p>
+
+
+<div class="container my-5">
+    <div *ngFor="let item of latestNews$ | async" class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+        <div class="col-md-12 p-3 p-md-5 pt-md-3">
+            <div class="lc-block"><img class="rounded mh-50 mw-100" src="{{item.images.thumbnail}}" alt="Photo by Diego PH" width="720"></div>
+        </div>
+        <div class="col-lg-12 p-3 p-lg-5 pt-lg-3">
+            <div class="lc-block mb-3">
+                <div editable="rich">
+                    <h2 class="fw-bold display-4">{{item.title}}&nbsp;<p></p>
+                        <p></p>
+                    </h2>
+                </div>
+            </div>
+
+            <div class="lc-block mb-3">
+                <div editable="rich">
+                    <p class="lead">{{item.snippet}}
+                    </p>
+                </div>
+            </div>
+
+            <div class="lc-block d-grid gap-2 d-md-flex justify-content-md-start"><a class="btn btn-primary px-4 me-md-2" href={{item.newsUrl}} role="button">Click for more details</a>
+            </div>
+        </div>
+    </div>
+    
+</div>
