--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,9 +19,11 @@
           <a class="nav-link" routerLink="users">Users</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="counter">Counter</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="newsapp" href="#">News App</a>
         </li>
-
       </ul>
     </div>
   </div>
