Added the movies store

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -42,7 +42,9 @@
                 </div>
             </div>
             <div class="col-md-12 mt-3 text-center">
-                <a class="btn btn-success-gradiant text-white btn-md border-0"><span>View Details</span></a>
+                <!-- <div>Counter value: {{count$ | async}}</div> -->
+                <a class="btn btn-success-gradiant text-white btn-md border-0"><span>Counter value: {{count$ |
+                        async}}</span></a>
             </div>
         </div>
     </div>
