--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,6 +22,9 @@
           <a class="nav-link" routerLink="counter">Counter</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="movies">Movies</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="newsapp" href="#">News App</a>
         </li>
       </ul>
